// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogicHelper _setStartingAndImpossibleItems when in swordless mode sets sword to 0 in the starting items and adds impossible items 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hero's Shield": 1,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Mirror Shield": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Sword": 0,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Triforce Shard": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`LogicHelper _setStartingAndImpossibleItems when in swordless mode sets sword to 0 in the starting items and adds impossible items 2`] = `
Object {
  "Hurricane Spin": 1,
  "Progressive Sword": 1,
}
`;

exports[`LogicHelper _setStartingAndImpossibleItems when starting without a sword sets sword to 0 in the starting items 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hero's Shield": 1,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Mirror Shield": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Sword": 0,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Triforce Shard": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`LogicHelper _setStartingAndImpossibleItems with no starting shards, no starting gear, and starting with a sword sets the starting and impossible items 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hero's Shield": 1,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Mirror Shield": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Sword": 1,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Triforce Shard": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`LogicHelper _setStartingAndImpossibleItems with starting gear sets the starting items based on the starting gear 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 1,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 1,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hero's Shield": 1,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Mirror Shield": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Sword": 3,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Triforce Shard": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`LogicHelper _setStartingAndImpossibleItems with starting shards sets the number of starting shards 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hero's Shield": 1,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Mirror Shield": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Sword": 1,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Triforce Shard": 7,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`LogicHelper allItems returns a list of all the items, including entrances, charts, and keys 1`] = `
Array [
  "Entered Savage Labyrinth",
  "Entered Dragon Roost Island Cave",
  "Entered Fire Mountain Cave",
  "Entered Ice Ring Isle Cave",
  "Entered Cabana Labyrinth",
  "Entered Needle Rock Isle Cave",
  "Entered Angular Isles Cave",
  "Entered Boating Course Cave",
  "Entered Stone Watcher Island Cave",
  "Entered Overlook Island Cave",
  "Entered Bird's Peak Rock Cave",
  "Entered Pawprint Isle Chuchu Cave",
  "Entered Pawprint Isle Wizzrobe Cave",
  "Entered Diamond Steppe Island Cave",
  "Entered Bomb Island Cave",
  "Entered Rock Spire Isle Cave",
  "Entered Shark Island Cave",
  "Entered Cliff Plateau Isles Cave",
  "Entered Horseshoe Island Cave",
  "Entered Star Island Cave",
  "Treasure Chart 25",
  "Treasure Chart 7",
  "Treasure Chart 24",
  "Triforce Chart 2",
  "Treasure Chart 11",
  "Triforce Chart 7",
  "Treasure Chart 13",
  "Treasure Chart 41",
  "Treasure Chart 29",
  "Treasure Chart 22",
  "Treasure Chart 18",
  "Treasure Chart 30",
  "Treasure Chart 39",
  "Treasure Chart 19",
  "Treasure Chart 8",
  "Treasure Chart 2",
  "Treasure Chart 10",
  "Treasure Chart 26",
  "Treasure Chart 3",
  "Treasure Chart 37",
  "Treasure Chart 27",
  "Treasure Chart 38",
  "Triforce Chart 1",
  "Treasure Chart 21",
  "Treasure Chart 6",
  "Treasure Chart 14",
  "Treasure Chart 34",
  "Treasure Chart 5",
  "Treasure Chart 28",
  "Treasure Chart 35",
  "Triforce Chart 3",
  "Triforce Chart 6",
  "Treasure Chart 1",
  "Treasure Chart 20",
  "Treasure Chart 36",
  "Treasure Chart 23",
  "Treasure Chart 12",
  "Treasure Chart 16",
  "Treasure Chart 4",
  "Treasure Chart 17",
  "Treasure Chart 31",
  "Triforce Chart 5",
  "Treasure Chart 9",
  "Triforce Chart 4",
  "Treasure Chart 40",
  "Triforce Chart 8",
  "Treasure Chart 15",
  "Treasure Chart 32",
  "Treasure Chart 33",
  "Entered DRC",
  "Entered FW",
  "Entered TotG",
  "Entered FF",
  "Entered ET",
  "Entered WT",
  "Entered GT",
  "Tingle Tuner",
  "Wind Waker",
  "Spoils Bag",
  "Grappling Hook",
  "Power Bracelets",
  "Iron Boots",
  "Bait Bag",
  "Boomerang",
  "Hookshot",
  "Delivery Bag",
  "Bombs",
  "Skull Hammer",
  "Deku Leaf",
  "Hero's Shield",
  "Mirror Shield",
  "Triforce Shard",
  "Nayru's Pearl",
  "Din's Pearl",
  "Farore's Pearl",
  "Wind's Requiem",
  "Ballad of Gales",
  "Command Melody",
  "Earth God's Lyric",
  "Wind God's Aria",
  "Song of Passing",
  "Boat's Sail",
  "Note to Mom",
  "Maggie's Letter",
  "Moblin's Letter",
  "Cabana Deed",
  "Tingle Statue",
  "Magic Meter Upgrade",
  "Ghost Ship Chart",
  "Progressive Sword",
  "Progressive Bow",
  "Progressive Wallet",
  "Progressive Picto Box",
  "Empty Bottle",
  "Telescope",
  "Magic Armor",
  "Hero's Charm",
  "Progressive Quiver",
  "Progressive Bomb Bag",
  "Hurricane Spin",
  "DRC Big Key",
  "DRC Small Key",
  "FW Big Key",
  "FW Small Key",
  "TotG Big Key",
  "TotG Small Key",
  "ET Big Key",
  "ET Small Key",
  "WT Big Key",
  "WT Small Key",
]
`;

exports[`LogicHelper requirementsForEntrance returns simplified requirements for Bomb Island Secret Cave 1`] = `
BooleanExpression {
  "items": Array [
    "Bombs",
    "Power Bracelets",
  ],
  "type": "or",
}
`;

exports[`LogicHelper requirementsForEntrance returns simplified requirements for Forbidden Woods 1`] = `
BooleanExpression {
  "items": Array [
    "Grappling Hook",
    "Deku Leaf",
    BooleanExpression {
      "items": Array [
        "Progressive Sword x1",
        "Skull Hammer",
        "Boomerang",
        "Bombs",
        "Magic Meter Upgrade",
      ],
      "type": "or",
    },
  ],
  "type": "and",
}
`;

exports[`LogicHelper requirementsForLocation returns simplified requirements for Dragon Roost Cavern - Gohma Heart Container 1`] = `
BooleanExpression {
  "items": Array [
    "DRC Small Key x4",
    "Grappling Hook",
    "DRC Big Key",
  ],
  "type": "and",
}
`;

exports[`LogicHelper requirementsForLocation returns simplified requirements for Outset Island - Savage Labyrinth - Floor 30 1`] = `
BooleanExpression {
  "items": Array [
    BooleanExpression {
      "items": Array [
        BooleanExpression {
          "items": Array [
            BooleanExpression {
              "items": Array [
                "Progressive Sword x1",
                "Boomerang",
                "Skull Hammer",
              ],
              "type": "or",
            },
            "Deku Leaf",
          ],
          "type": "and",
        },
        "Hookshot",
      ],
      "type": "or",
    },
    "Power Bracelets",
    BooleanExpression {
      "items": Array [
        "Boomerang",
        BooleanExpression {
          "items": Array [
            "Hookshot",
            "Progressive Sword x1",
          ],
          "type": "and",
        },
        BooleanExpression {
          "items": Array [
            "Deku Leaf",
            "Progressive Sword x1",
          ],
          "type": "and",
        },
        "Skull Hammer",
        "Progressive Bow x1",
        "Bombs",
      ],
      "type": "or",
    },
    BooleanExpression {
      "items": Array [
        BooleanExpression {
          "items": Array [
            "Boomerang",
            "Progressive Sword x1",
          ],
          "type": "and",
        },
        "Progressive Bow x1",
        "Bombs",
        BooleanExpression {
          "items": Array [
            "Deku Leaf",
            "Progressive Sword x1",
          ],
          "type": "and",
        },
        "Skull Hammer",
      ],
      "type": "or",
    },
    BooleanExpression {
      "items": Array [
        "Progressive Sword x1",
        "Progressive Bow x3",
        "Skull Hammer",
      ],
      "type": "or",
    },
    BooleanExpression {
      "items": Array [
        "Grappling Hook",
        "Progressive Sword x1",
        "Skull Hammer",
      ],
      "type": "or",
    },
  ],
  "type": "and",
}
`;

exports[`LogicHelper requirementsForLocation returns simplified requirements for Outset Island - Savage Labyrinth - Floor 50 1`] = `
BooleanExpression {
  "items": Array [
    BooleanExpression {
      "items": Array [
        "Deku Leaf",
        "Hookshot",
      ],
      "type": "or",
    },
    "Power Bracelets",
    "Mirror Shield",
    "Skull Hammer",
  ],
  "type": "and",
}
`;
